--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8"/>
     <meta name="viewport"  content="width=device-width , initial-scale=1.0"/>
     <link  rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link  rel="stylesheet" href="./css/app.css"/>
+    <link  rel="stylesheet" href="./app.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
-    <title>پروژه نهم</title>
+    <title> پالت رنگ</title>
 
 </head>
 
@@ -23,6 +23,6 @@
 
 
 
-    <script src="./js/app.js"></script>
+    <script src="./app.js"></script>
     </body>
     </html>
